replace deprecated new URL with URI.create