@@ -10,6 +10,7 @@ import java.io.File;
 import java.io.FileWriter;
 import java.io.InputStream;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
 import java.nio.file.Files;
 import java.nio.file.Path;
@@ -47,7 +48,7 @@ public class LocaleManager {
         String rawUrl = "https://raw.githubusercontent.com/ZeNyfh/Zenvibe/main/locales/";
         System.out.println("Syncing locales from git.");
         try {
-            URL url = new URL(apiUrl);
+            URL url = URI.create(apiUrl).toURL();
             HttpURLConnection connection = (HttpURLConnection) url.openConnection();
             connection.setRequestMethod("GET");
             connection.setRequestProperty("User-Agent", "Mozilla/5.0");
@@ -72,7 +73,7 @@ public class LocaleManager {
                 String fileURL = rawUrl + filename;
                 System.out.println("updating locale from: " + fileURL);
 
-                URL downloadURL = new URL(fileURL);
+                URL downloadURL = URI.create(fileURL).toURL();
                 Path localePath = Path.of("locales", filename);
 
                 Files.createDirectories(localePath.getParent()); // creation for first time setup cases.
