@@ -6,6 +6,7 @@ import com.sedmelluq.discord.lavaplayer.track.AudioTrack;
 import java.io.BufferedReader;
 import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
@@ -24,7 +25,7 @@ public class LRCLIBManager {
         }
 
         try {
-            URL requestURL = new URL(url);
+            URL requestURL = URI.create(url).toURL();
             HttpURLConnection connection = (HttpURLConnection) requestURL.openConnection();
             connection.setRequestMethod("GET");
 
